--- a/TokuCinema/src/styles/components/mediadetails/tablet.scss
+++ b/TokuCinema/src/styles/components/mediadetails/tablet.scss
@@ -18,3 +18,11 @@
 .left-information {
   margin-right: 30px;
 }
+
+.right-information {
+  width: auto;
+}
+
+.left-information {
+  width: auto;
+}
